# snail

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/access/: Cargo.toml
crates/access/src/: dovecot.rs  error.rs  imap.rs  lib.rs  manager.rs  msa.rs  pop.rs  web.rs
crates/client/: Cargo.toml  bind.rs  build.rs
crates/client/bindings/: .gitignore  README.md
crates/client/src/: lib.rs  main.rs
crates/filter/: Cargo.toml
crates/filter/src/: lib.rs
crates/filter/src/spam/: mod.rs
crates/identity/: Cargo.toml
crates/identity/src/: auth.rs  check.rs  connect.rs  data.rs  error.rs  lib.rs  oauth.rs  sals.rs
crates/mail/: Cargo.toml
crates/mail/src/: error.rs  lib.rs  main.rs  snailmail.rs
crates/mail/src/observability/: config.rs  manager.rs  mod.rs
crates/mail/src/security/: certs.rs  mod.rs  scanner.rs  tls.rs
crates/mail/src/storage/: mda.rs  mod.rs  store.rs
crates/mail/src/transport/: inbound.rs  mod.rs  mta.rs  outbound.rs  smtp.rs
crates/network/: Cargo.toml
crates/network/src/: error.rs  lib.rs
crates/network/src/dane/: mod.rs
crates/network/src/dkim/: canonicalize.rs  mod.rs  signature.rs  verify.rs
crates/network/src/dmarc/: eval.rs  mod.rs
crates/network/src/dns/: a.rs  dkim.rs  dmark.rs  lookup.rs  manager.rs  mod.rs  mx.rs  reverse.rs  tlsa.rs  txt.rs
crates/network/src/mta_sts/: fetch.rs  mod.rs  policy.rs
crates/network/src/spf/: eval.rs  macro_expand.rs  mod.rs  record.rs
crates/network/src/tls/: mod.rs
crates/security/: Cargo.toml
crates/security/src/: error.rs  greylist.rs  lib.rs  throttle.rs
crates/security/src/audit/: audit_logger.rs  config.rs  manager.rs  mod.rs  sink.rs
crates/security/src/credential/: manager.rs  mod.rs  provider.rs  reciever.rs
crates/security/src/encryption/: decrypt.rs  encrypt.rs  hash.rs  manager.rs  mod.rs  salt.rs
crates/security/src/encryption/algos/: mod.rs
crates/security/src/firewall/: allow.rs  block.rs  config.rs  firewall.rs  manager.rs  mod.rs  pause.rs  trace.rs  track.rs
crates/utilities/: Cargo.toml
crates/utilities/src/: config.rs  error.rs  lib.rs
docs/plans/: 2026-05-25-engine-phase-roadmap-m9-m15.md  2026-05-25-foundation-utilities-telemetry.md  2026-05-25-m10-security.md  2026-05-25-m16-mta-internet-wiring.md  2026-05-25-m9-network-dns-tls.md
services/snail_server/: Cargo.toml
services/snail_server/src/: config.rs  dmarc_report.rs  dsn.rs  lib.rs  main.rs  outbound.rs  received.rs  serve.rs  server.rs  spool.rs  worker.rs
services/snail_server/tests/: relay_e2e.rs
services/telemetry/: Cargo.toml
services/telemetry/src/: lib.rs  main.rs
services/telemetry/src/data/: mod.rs
services/telemetry/src/exporters/: mod.rs
services/telemetry/src/lib/: mod.rs
services/telemetry/src/listeners/: mod.rs
services/telemetry/src/otel/: mod.rs
