[workspace]
resolver = "3"
members = [
    "crates/utilities",
    "services/telemetry",
    "crates/mail",
    "crates/network",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
publish = false

[workspace.dependencies]
# Error handling
thiserror = "2"
anyhow = "1"

# Tracing core — stable API, pinned exactly
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.19", features = ["env-filter", "fmt", "json"] }

# OpenTelemetry — ONE cohesive cohort (these break in lockstep; do not mix minors)
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["trace"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "trace"] }
opentelemetry-stdout = "0.27"
tracing-opentelemetry = "0.28"

# Async runtime + networking (m9)
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "time"] }
hickory-resolver = "0.24"
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"

# Internal crates
utilities = { path = "crates/utilities" }
telemetry = { path = "services/telemetry" }
network = { path = "crates/network" }

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
