[workspace]
resolver = "3"
members = [
    "crates/utilities",
    "services/telemetry",
    "crates/mail",
    "crates/network",
    "crates/security",
    "crates/identity",
    "crates/access",
    "crates/filter",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
publish = false

[workspace.dependencies]
# Error handling
thiserror = "2"
anyhow = "1"

# Tracing core — stable API, pinned exactly
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.19", features = ["env-filter", "fmt", "json"] }

# OpenTelemetry — ONE cohesive cohort (these break in lockstep; do not mix minors)
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["trace"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "trace"] }
opentelemetry-stdout = "0.27"
tracing-opentelemetry = "0.28"

# Async runtime + networking (m9)
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "time"] }
async-trait = "0.1"
hickory-resolver = "0.24"
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"
rcgen = "0.13"

# Security / crypto (m10)
argon2 = "0.5"
chacha20poly1305 = "0.10"
governor = "0.6"

# Identity / auth (m11)
base64 = "0.22"

# Internal crates
utilities = { path = "crates/utilities" }
telemetry = { path = "services/telemetry" }
network = { path = "crates/network" }
security = { path = "crates/security" }
identity = { path = "crates/identity" }
mail = { path = "crates/mail" }
access = { path = "crates/access" }
filter = { path = "crates/filter" }

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
