[workspace]
resolver = "3"
members = [
    "crates/utilities",
    "services/telemetry",
    "crates/mail",
    "crates/network",
    "crates/security",
    "crates/identity",
    "crates/access",
    "crates/filter",
    "services/snail_server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
publish = false

[workspace.dependencies]
# Error handling
thiserror = "2"
anyhow = "1"

# Tracing core — stable API, pinned exactly
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.19", features = ["env-filter", "fmt", "json"] }

# OpenTelemetry — ONE cohesive cohort (these break in lockstep; do not mix minors)
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["trace"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "trace"] }
opentelemetry-stdout = "0.27"
tracing-opentelemetry = "0.28"

# Async runtime + networking (m9)
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "time"] }
async-trait = "0.1"
# DNSSEC validation (dnssec-aws-lc-rs, matching the rustls aws-lc-rs provider) is
# required for DANE (RFC 7672): TLSA records are only trusted when Proof::Secure.
hickory-resolver = { version = "0.26", features = ["dnssec-aws-lc-rs"] }
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"
rcgen = "0.13"

# Security / crypto (m10)
argon2 = "0.5"
chacha20poly1305 = "0.10"
governor = "0.6"
zeroize = { version = "1", features = ["derive"] }
blake2 = "0.10"

# DKIM verification crypto (RFC 6376 RSA-SHA256 + RFC 8463 Ed25519-SHA256).
# sha2 `oid` feature provides AssociatedOid, required by rsa's Pkcs1v15Sign.
rsa = "0.9"
sha2 = { version = "0.10", features = ["oid"] }
ed25519-dalek = "2"

# DMARC organizational-domain alignment (RFC 7489) via the Public Suffix List.
psl = "2"
# gzip compression for DMARC aggregate (rua) reports (RFC 7489 §7.2.1.1).
flate2 = "1"
# PKIX trust anchors for MTA-STS (RFC 8461): HTTPS policy fetch + enforced
# outbound TLS certificate verification.
webpki-roots = "0.26"
# X.509 parsing for DANE (RFC 7672): extract the SubjectPublicKeyInfo for TLSA
# selector `Spki`, and decode chain certificates for DANE-TA matching.
x509-cert = "0.2"
# WebPKI chain verification for DANE-TA (usage 2): validate the server chain up
# to the TLSA-matched trust anchor. Crypto algorithms are supplied by the active
# rustls CryptoProvider, so no built-in crypto backend is enabled here.
rustls-webpki = { version = "0.103", default-features = false, features = ["alloc", "std"] }

# Identity / auth (m11)
base64 = "0.22"

# Internal crates
utilities = { path = "crates/utilities" }
telemetry = { path = "services/telemetry" }
network = { path = "crates/network" }
security = { path = "crates/security" }
identity = { path = "crates/identity" }
mail = { path = "crates/mail" }
access = { path = "crates/access" }
filter = { path = "crates/filter" }

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
