[package]
name = "access"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
utilities.workspace = true
telemetry.workspace = true
identity.workspace = true
security.workspace = true
mail.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
