[package]
name = "network"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
utilities.workspace = true
telemetry.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true
hickory-resolver.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
rustls-pemfile.workspace = true
# DKIM verification (RFC 6376 / RFC 8463).
rsa.workspace = true
sha2.workspace = true
ed25519-dalek.workspace = true
base64.workspace = true

[dev-dependencies]
rcgen.workspace = true
# Test-only RNG for generating an RSA keypair in the DKIM round-trip tests.
rand_core = { version = "0.6", features = ["getrandom"] }

[lints]
workspace = true
