[package]
name = "snail_server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "snail_server"
path = "src/lib.rs"

[[bin]]
name = "snail-server"
path = "src/main.rs"

[dependencies]
utilities.workspace = true
telemetry.workspace = true
identity.workspace = true
security.workspace = true
network.workspace = true
mail.workspace = true
filter.workspace = true
access.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["signal", "sync", "fs"] }
rustls.workspace = true
tokio-rustls.workspace = true
rcgen.workspace = true

[dev-dependencies]
base64.workspace = true
async-trait.workspace = true

[lints]
workspace = true
