[package]
name = "snail_server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "snail_server"
path = "src/lib.rs"

[[bin]]
name = "snail-server"
path = "src/main.rs"

[dependencies]
utilities.workspace = true
telemetry.workspace = true
identity.workspace = true
security.workspace = true
network.workspace = true
mail.workspace = true
filter.workspace = true
access.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["signal", "sync", "fs"] }
rustls.workspace = true
tokio-rustls.workspace = true
rcgen.workspace = true
base64.workspace = true
# gzip-encode DMARC aggregate (rua) reports (RFC 7489 §7.2.1.1).
flate2.workspace = true

[dev-dependencies]
async-trait.workspace = true
governor.workspace = true

[lints]
workspace = true
