[package]
name = "telemetry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "telemetry"
path = "src/lib.rs"

[[bin]]
name = "telemetry"
path = "src/main.rs"

[dependencies]
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-stdout.workspace = true
anyhow.workspace = true

[lints]
workspace = true
